--- a/about-us.html
+++ b/about-us.html
@@ -48,17 +48,17 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 ">
               <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="about-us.html">About us</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">FAQs</a>
+                <a class="nav-link" href="FAQs.html">FAQs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link" href="Blog.html">Blog</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Desktop Software</a>
@@ -392,100 +392,6 @@
   <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   <script src="js/main.js"></script>
-  <script>
-    $('#slider1').slick({
-      dots: true,
-      arrows: false,
-      infinite: true,
-      speed: 300,
-      slidesToShow: 4,
-      slidesToScroll: 1,
-
-      responsive: [
-        {
-          breakpoint: 1200,
-          settings: {
-            slidesToShow: 3,
-            slidesToScroll: 1,
-            infinite: true,
-            dots: true
-          }
-        },
-        {
-          breakpoint: 800,
-          settings: {
-            slidesToShow: 2,
-            slidesToScroll: 1
-          }
-        },
-        {
-          breakpoint: 600,
-          settings: {
-            slidesToShow: 1,
-            slidesToScroll: 1
-          }
-        }
-        // You can unslick at a given breakpoint now by adding:
-        // settings: "unslick"
-        // instead of a settings object
-      ]
-    });
-    $('#slider2').slick({
-      dots: true,
-      arrows: false,
-      infinite: true,
-      speed: 300,
-      slidesToShow: 3,
-      slidesToScroll: 1,
-
-      responsive: [
-        {
-          breakpoint: 1200,
-          settings: {
-            slidesToShow: 2,
-            slidesToScroll: 1,
-            infinite: true,
-            dots: true
-          }
-        },
-        {
-          breakpoint: 800,
-          settings: {
-            slidesToShow: 2,
-            slidesToScroll: 1
-          }
-        },
-        {
-          breakpoint: 600,
-          settings: {
-            slidesToShow: 1,
-            slidesToScroll: 1
-          }
-        }
-        // You can unslick at a given breakpoint now by adding:
-        // settings: "unslick"
-        // instead of a settings object
-      ]
-    });
-    var app = document.getElementById('app');
-
-    var typewriter = new Typewriter(app, {
-      loop: true
-    });
-
-    typewriter.typeString('Web Developer')
-      .pauseFor(2500)
-      .deleteAll()
-      .typeString('APP Developer')
-      .pauseFor(2500)
-      .deleteAll()
-      .typeString('Web Designer')
-      .pauseFor(2500)
-      .deleteAll()
-      .typeString('FrontEnd Developer')
-      .pauseFor(2500)
-      .start();
-  </script>
 
 </body>
 
