--- a/Blog.html
+++ b/Blog.html
@@ -120,7 +120,7 @@
                     <p>Suggests that the content likely provides valuable information and step-by-step guidance for
                       individuals interested in
                       starting an online fish table business.</p>
-                    <a href="">Read More</a>
+                    <a href="Blog-details.html">Read More</a>
                   </div>
                 </div>
               </div>
@@ -153,7 +153,7 @@
                     <p>Suggests that the content likely provides valuable information and step-by-step guidance for
                       individuals interested in
                       starting an online fish table business.</p>
-                    <a href="">Read More</a>
+                    <a href="Blog-details.html">Read More</a>
                   </div>
                 </div>
               </div>
@@ -186,7 +186,7 @@
                     <p>Suggests that the content likely provides valuable information and step-by-step guidance for
                       individuals interested in
                       starting an online fish table business.</p>
-                    <a href="">Read More</a>
+                    <a href="Blog-details.html">Read More</a>
                   </div>
                 </div>
               </div>
@@ -219,7 +219,7 @@
                     <p>Suggests that the content likely provides valuable information and step-by-step guidance for
                       individuals interested in
                       starting an online fish table business.</p>
-                    <a href="">Read More</a>
+                    <a href="Blog-details.html">Read More</a>
                   </div>
                 </div>
               </div>
@@ -252,7 +252,7 @@
                     <p>Suggests that the content likely provides valuable information and step-by-step guidance for
                       individuals interested in
                       starting an online fish table business.</p>
-                    <a href="">Read More</a>
+                    <a href="Blog-details.html">Read More</a>
                   </div>
                 </div>
               </div>
@@ -285,7 +285,7 @@
                     <p>Suggests that the content likely provides valuable information and step-by-step guidance for
                       individuals interested in
                       starting an online fish table business.</p>
-                    <a href="">Read More</a>
+                    <a href="Blog-details.html">Read More</a>
                   </div>
                 </div>
               </div>
@@ -562,7 +562,7 @@
         <!-- single item start  -->
         <div class="col-lg-4">
           <div class="itemLeft">
-            <a href=""><img src="img/developer-360-logo.svg" alt=""></a>
+            <a href="index.html"><img src="img/developer-360-logo.svg" alt=""></a>
             <p>Where Technology Meets Innovation. We are a dynamic team dedicated to creating exceptional
               digital experiences.
               Specializing in game and web development, we blend cutting-edge technology with creative
