--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 ">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About us</a>
+                                <a class="nav-link" href="about-us.html">About us</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#">FAQs</a>
+                                <a class="nav-link" href="FAQs.html">FAQs</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Blog</a>
+                                <a class="nav-link" href="Blog.html">Blog</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Desktop Software</a>
@@ -986,6 +986,8 @@
             speed: 300,
             slidesToShow: 4,
             slidesToScroll: 1,
+            autoplay: true,
+            autoplaySpeed: 3000,
 
             responsive: [
                 {
@@ -1023,6 +1025,8 @@
             speed: 300,
             slidesToShow: 3,
             slidesToScroll: 1,
+            autoplay: true,
+            autoplaySpeed: 3000,
 
             responsive: [
                 {
