--- a/FAQs.html
+++ b/FAQs.html
@@ -61,7 +61,7 @@
                 <a class="nav-link" href="Blog.html">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Desktop Software</a>
+                <a class="nav-link" href="games-details.html">Desktop Software</a>
               </li>
             </ul>
           </div>
