--- a/Blog-details.html
+++ b/Blog-details.html
@@ -257,7 +257,7 @@
         <!-- single item left end -->
 
         <!-- single item left start  -->
-        <div class="col-lg-4">
+        <div class="col-lg-4 mt-lg-0 mt-5 pt-lg-0 pt-4">
           <div class="itemRight">
             <h4>Search By Keyword</h4>
             <form action="" class="d-flex">
@@ -432,7 +432,14 @@
     </div>
   </div>
   <!-- blog item end -->
-
+  <!-- fixedCall start  -->
+  <div class="fixedCall">
+    <ul>
+      <li><a href=""><img src="img/call-green-circle.svg" alt="Call"></a></li>
+      <li><a href=""><img src="img/whatsapp-fixd.svg" alt="Whatsapp"></a></li>
+    </ul>
+  </div>
+  <!-- fixedCall end  -->
 
   <!-- footer start  -->
   <footer>
