--- a/FAQs.html
+++ b/FAQs.html
@@ -294,6 +294,14 @@
     </div>
   </div>
   <!-- Frequently Asked Questions end -->
+  <!-- fixedCall start  -->
+  <div class="fixedCall">
+    <ul>
+      <li><a href=""><img src="img/call-green-circle.svg" alt="Call"></a></li>
+      <li><a href=""><img src="img/whatsapp-fixd.svg" alt="Whatsapp"></a></li>
+    </ul>
+  </div>
+  <!-- fixedCall end  -->
   <!-- footer start  -->
   <footer>
     <div class="container">
