--- a/about-us.html
+++ b/about-us.html
@@ -279,7 +279,14 @@
 
 
 
-
+  <!-- fixedCall start  -->
+  <div class="fixedCall">
+    <ul>
+      <li><a href=""><img src="img/call-green-circle.svg" alt="Call"></a></li>
+      <li><a href=""><img src="img/whatsapp-fixd.svg" alt="Whatsapp"></a></li>
+    </ul>
+  </div>
+  <!-- fixedCall end  -->
 
 
   <!-- footer start  -->
