--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <!-- single item start  -->
                 <div class="col-lg-6 ">
                     <div class="itemWrapp">
-                        <div class="item shadow-lg">
+                        <div class="item shadow">
                             <img src="img/loho.png" alt="img">
                             <h4>Real Money Ludo Tournament App Development & Source Code</h4>
                             <ul>
@@ -250,7 +250,7 @@
                 <!-- single item start  -->
                 <div class="col-lg-6">
                     <div class="itemWrapp">
-                        <div class="item shadow-lg">
+                        <div class="item shadow">
                             <img src="img/satta.png" alt="img">
                             <h4>Satta Matka Website And App Development</h4>
                             <ul>
@@ -271,7 +271,7 @@
                 <!-- single item start  -->
                 <div class="col-lg-6">
                     <div class="itemWrapp">
-                        <div class="item shadow-lg">
+                        <div class="item shadow">
                             <img src="img/n.png" alt="img">
                             <h4>Professional News App Development (Video,Youtube,Weather,Survey)</h4>
                             <ul>
@@ -291,7 +291,7 @@
                 <!-- single item start  -->
                 <div class="col-lg-6">
                     <div class="itemWrapp">
-                        <div class="item shadow-lg">
+                        <div class="item shadow">
                             <img src="img/cricket.png" alt="img">
                             <h4>Cricket Fantacy App Development (Dream 11 app development)</h4>
                             <ul>
@@ -814,10 +814,13 @@
                     future together.</p>
             </div>
             <!-- common title  end -->
-            <div class="gMap">
-                <a href="" class="d-block">
-                    <img src="img/map.png" alt="map">
-                </a>
+            <div class="gMap shadow">
+                <div class="ratio ratio-16x9 rounded ">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3499.3046457112578!2d77.1790492!3d28.7104403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d0336f0847be1%3A0x1c043a7b6c0034f1!2sDeveloper%20360!5e0!3m2!1sen!2sbd!4v1703941867629!5m2!1sen!2sbd"
+                        style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                        class="rounded "></iframe>
+                </div>
             </div>
             <div class="mapConnect">
                 <div class="row">
@@ -867,7 +870,14 @@
         </div>
     </div>
     <!-- Connect with Developer 360 end -->
-
+    <!-- fixedCall start  -->
+    <div class="fixedCall">
+        <ul>
+            <li><a href=""><img src="img/call-green-circle.svg" alt="Call"></a></li>
+            <li><a href=""><img src="img/whatsapp-fixd.svg" alt="Whatsapp"></a></li>
+        </ul>
+    </div>
+    <!-- fixedCall end  -->
     <!-- footer start  -->
     <footer>
         <div class="container">
@@ -967,6 +977,77 @@
         </div>
     </footer>
     <!-- footer start  -->
+
+
+    <!-- Modal -->
+    <div class="modal Modal2 fade" id="myModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header justify-content-end">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- row start  -->
+                    <div class="row">
+                        <!-- single item start  -->
+                        <div class="col-lg-5 align-self-center d-lg-block d-none">
+                            <div class="itemLeft">
+                                <img src="img/modal.svg" alt="img">
+                            </div>
+                        </div>
+                        <!-- single item end -->
+
+                        <!-- single item start  -->
+                        <div class="col-lg-7 align-self-center">
+                            <div class="itemRight">
+                                <h2>Connect with Developer 360</h2>
+                                <p>Have a project in mind or need expert advice? Contact us today and let's start
+                                    shaping your digital future together.</p>
+                                <form action="">
+                                    <!-- single item start  -->
+                                    <div class="inputItem">
+                                        <label for="exampleFormControlInput1" class="form-label">Full Name</label>
+                                        <input type="text" class="form-control" id="name" placeholder="your name">
+                                    </div>
+                                    <!-- single item end -->
+
+                                    <!-- single item start  -->
+                                    <div class="inputItem">
+                                        <label for="exampleFormControlInput1" class="form-label">Phone Number</label>
+                                        <input type="number" class="form-control" id="number"
+                                            placeholder="+1 9876543210">
+                                    </div>
+                                    <!-- single item end -->
+                                    <!-- single item start  -->
+                                    <div class="inputItem">
+                                        <label for="exampleFormControlInput1" class="form-label">Your Query</label>
+                                        <input type="text" class="form-control" id="Query"
+                                            placeholder="Write Your Query">
+                                    </div>
+                                    <!-- single item end -->
+                                    <button type="submit">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="21"
+                                            viewBox="0 0 22 21" fill="none">
+                                            <path
+                                                d="M20.6731 15.719C20.0337 15.1827 16.2836 12.808 15.6603 12.917C15.3677 12.9689 15.1438 13.2184 14.5446 13.9332C14.2675 14.285 13.9632 14.6145 13.6345 14.9186C13.0323 14.7731 12.4493 14.557 11.8978 14.2748C9.73467 13.2217 7.98717 11.4737 6.93469 9.31029C6.65247 8.75872 6.43637 8.17576 6.29089 7.5735C6.59503 7.2448 6.92453 6.9405 7.27634 6.66341C7.99036 6.06424 8.24056 5.84184 8.29251 5.54775C8.40151 4.92297 6.02459 1.17433 5.49054 0.534925C5.26667 0.270091 5.06329 0.0923157 4.80285 0.0923157C4.04785 0.0923157 0.632812 4.31502 0.632812 4.86225C0.632812 4.90688 0.705971 9.30297 6.25797 14.9515C11.9065 20.5035 16.3026 20.5767 16.3473 20.5767C16.8945 20.5767 21.1172 17.1617 21.1172 16.4067C21.1172 16.1462 20.9394 15.9428 20.6731 15.719Z"
+                                                fill="#00FFFF" />
+                                        </svg>
+                                        <span> TALK TO CONSULTANT</span>
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+                        <!-- single item end -->
+
+                    </div>
+                    <!-- row end -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"
         integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
@@ -982,7 +1063,7 @@
         $('#slider1').slick({
             dots: true,
             arrows: false,
-            infinite: true,
+
             speed: 300,
             slidesToShow: 4,
             slidesToScroll: 1,
@@ -995,7 +1076,7 @@
                     settings: {
                         slidesToShow: 3,
                         slidesToScroll: 1,
-                        infinite: true,
+
                         dots: true
                     }
                 },
@@ -1021,7 +1102,6 @@
         $('#slider2').slick({
             dots: true,
             arrows: false,
-            infinite: true,
             speed: 300,
             slidesToShow: 3,
             slidesToScroll: 1,
@@ -1034,7 +1114,6 @@
                     settings: {
                         slidesToShow: 2,
                         slidesToScroll: 1,
-                        infinite: true,
                         dots: true
                     }
                 },
@@ -1076,6 +1155,15 @@
             .pauseFor(2500)
             .start();
     </script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            setTimeout(function () {
+                var myModal = new bootstrap.Modal(document.getElementById('myModal2'));
+                myModal.show();
+            }, 5000); // 5000 milliseconds = 5 seconds
+        });
+    </script>
+
 
 </body>
 
