--- a/Blog.html
+++ b/Blog.html
@@ -502,9 +502,12 @@
       </div>
       <!-- common title  end -->
       <div class="gMap">
-        <a href="" class="d-block">
-          <img src="img/map.png" alt="map">
-        </a>
+        <div class="ratio ratio-16x9 rounded ">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3499.3046457112578!2d77.1790492!3d28.7104403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d0336f0847be1%3A0x1c043a7b6c0034f1!2sDeveloper%20360!5e0!3m2!1sen!2sbd!4v1703941867629!5m2!1sen!2sbd"
+            style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+            class="rounded "></iframe>
+        </div>
       </div>
       <div class="mapConnect">
         <div class="row">
@@ -554,6 +557,14 @@
     </div>
   </div>
   <!-- Connect with Developer 360 end -->
+  <!-- fixedCall start  -->
+  <div class="fixedCall">
+    <ul>
+      <li><a href=""><img src="img/call-green-circle.svg" alt="Call"></a></li>
+      <li><a href=""><img src="img/whatsapp-fixd.svg" alt="Whatsapp"></a></li>
+    </ul>
+  </div>
+  <!-- fixedCall end  -->
   <!-- footer start  -->
   <footer>
     <div class="container">
