update new design

--- a/Blog-details.html
+++ b/Blog-details.html
@@ -71,6 +71,8 @@
   </header>
   <!-- header end -->
 
+
+
   <!-- blog item start  -->
   <div class="BlogItem blog">
     <div class="container">
@@ -79,6 +81,15 @@
         <!-- single item left start  -->
         <div class="col-lg-8">
           <div class="BlogDetails">
+            <table>
+              <tr>
+                <td>Manik</td>
+                <td>Manik</td>
+                <td>Manik</td>
+                <td>Manik</td>
+                <td>Manik</td>
+              </tr>
+            </table>
             <!-- blogTop start  -->
             <div class="blogTop">
               <h1>A Guide on How to Launch Your Online Fish Table Business</h1>
