Update style test

--- a/Blog-details.html
+++ b/Blog-details.html
@@ -255,6 +255,51 @@
               <!-- single item end  -->
 
             </div>
+
+            <!-- content item style start  -->
+
+            <div class="testText mt-5">
+
+              <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
+              <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+              <blockquote>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed illum nam dolores id ipsam iste,
+                  consequuntur</p>
+                <figcaption>
+                  Write
+                </figcaption>
+              </blockquote>
+
+              <ul>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+              </ul>
+              <a href="">More</a>
+              <ul>
+                <ol>Item</ol>
+                <ol>Item</ol>
+                <ol>Item</ol>
+              </ul>
+
+
+              <img src="img/b01.png" alt="img">
+              <table>
+                <tr>
+                  <td>item</td>
+                  <td>item</td>
+                  <td>item</td>
+                  <td>item</td>
+                  <td>item</td>
+                  <td>item</td>
+                </tr>
+              </table>
+            </div>
+            <!-- content item style end -->
+
+
           </div>
         </div>
         <!-- single item left end -->
